-gotta make SelfUrinate SelfDefecate happen if using ground or toilet action ends too quickly

==============
[VERSION 0.43]
==============

-Added rounding to the bladder / bowel values in the GUI, and the peed / pooped values on the soiled clothing.

==============
[VERSION 0.42]
==============

-Added BathroomFunctions.ReequipBottomClothing and BathroomFunctions.ResetRemovedClothing
-Implemented re-equiping clothes after taking them off during bathroom functions
-Slightly modified Moodles_EN for consistency

==============
[VERSION 0.41]
==============

-Temporarily reversed thirst and hunger impacting bladder and bowel raise

==============
[VERSION 0.40]
==============

-Added code for a "Reset Sandbox Values" button in GUI. Maybe remove

-Simplified the UrinePuddle model by removing unnecessary faces. It is now a flat plane.
-Replaced the 3D model with a flat square plane, allowing for texture-based variations instead of relying on complex models.
-Introduced new textures for urine puddles:
	Hydrated texture (blue-er and clearer).
	Dehydrated texture (yellowish).
-Added Icons To Context Options
	Wash soiled clothing (uses PeedSelf texture)
	Pee in container (uses pee water bottle texture)
-Moved Bathroom_WasteProducts.txt models into Bathroom_Models.txt
-Added most (if not all) shorts to different list, meaning they will no longer show the peed jeans overlay.
-Renamed "Urine_Hydrated_0" to "Urine_Hydrated_0" and removed DisplayName
-Renamed "Urine_Hydrated_0" to "Urine_Hydrated_0" and removed DisplayName

-Thirst and Hunger Mechanics:
	Thirst and hunger levels now influence the production of urine and poop:
	Higher thirst/hunger slows down production.
	Lower thirst/hunger speeds it up.

-Increased the base urine production rate from 1% to 1.2% per cycle, making the system slightly faster.

-Added Traits: (Most are not yet fully implemented but will be worked on in future updates.)
	Bladder Traits:
